- reduced spaces between magnifying glass/ search term and search border - ng-show directive combined with limitTo value to show a "..." in item's title and description if they are shortened - more contrast between description and created tag - fixed height for title and description - increased number of letters in title and description before shortening to 75 letters in description and 50 letters for title

--- a/clients/youtube_producer/js/app_search/app_search.styl
+++ b/clients/youtube_producer/js/app_search/app_search.styl
@@ -10,7 +10,7 @@
         display: block;
         width: 95%;
         height: 50px;
-        padding-left: 5%;
+        padding-left: 10px;
         background-color: bg-query-input;
         border: 0;
         outline: 0;
@@ -21,7 +21,7 @@
         height: 50px;
         position: absolute;
         top: 35px;
-        right: 5%;
+        right: 10px;
         background: none;
         border: 0;
         outline: 0;
