--- a/clients/youtube_producer/js/ui_videoList/ui_videoList.styl
+++ b/clients/youtube_producer/js/ui_videoList/ui_videoList.styl
@@ -22,7 +22,7 @@
     background-color: bg-video-list-item;
     float: none;
     overflow: hidden;
-    padding-bottom: 10px;
+    padding: 0 0 10px 0;
     
     .img {
         display: block;
@@ -83,10 +83,13 @@
         font-size: 13px;
 
         .title{
+            display:  block;
             color: color-title;
             padding: 0;
             margin: 0;
             font-size: 17px;
+            height: 40px;
+            overflow: hidden;
             line-height: 125%;
             font-weight: normal;
             font-family: source_sans_proregular;
@@ -107,6 +110,8 @@
 
         .description{
             padding: 0;
+            height: 35px;
+            overflow: hidden;
             margin: 5px 0;
         }
     }
