--- a/clients/youtube_producer/js/yt_viewer/yt_viewer.styl
+++ b/clients/youtube_producer/js/yt_viewer/yt_viewer.styl
@@ -1,7 +1,6 @@
 .yt-viewer {
     margin: 0 auto 30px;
     background-color: bg-yt-viewer;
-    transition: background-color 0.5s ease-in-out;
     min-height: 75vh;
     overflow: hidden;
     box-shadow: 7px 7px 10px 0 rgba(0,0,0,0.3);
@@ -49,11 +48,11 @@
         
         button {
             font-family: source_sans_prolight;
-            height: 35px;
-            font-size: 20px;
+            height: 34px;
+            font-size: 18px;
             line-height: 100%;
             display: block;
-            padding: 5px;
+            padding: 4px 10px;
             background: bg-button;
             border: 0;
             outline: 0;
@@ -78,10 +77,10 @@
             width: auto;
             
             svg {
-                height: 20px;
+                height: 12px;
                 width: auto;
                 position: relative;
-                top: 3px;
+                top: 0;
                 margin: 0 0 0 5px;
             }
             
@@ -92,11 +91,6 @@
                 }
             }
         }
-    }
-
-    &.playlist-visible {
-        background-color: bg-yt-viewer-pl-visible;
-        transition: background-color 0.5s ease-in-out;
     }
 }
 
@@ -149,7 +143,7 @@ yt-player {
         height: 60px;
         padding: 0;
         background-color: bg-playlist-item;
-        transition: background-color 0.5s ease-in-out;
+        transition: background-color 0.25s ease-in-out;
         border-top: 1px solid #eee;
         border-bottom: 1px solid #ccc;
 
@@ -210,14 +204,15 @@ yt-player {
                 line-height: 150%;
                 height: 25px;
                 margin-bottom: 5px;
-                overflow: hidden;
-                white-space: nowrap;
             }
             .channel {
                 font-size: 0.8125em;
                 width: 100%;
+                height: 15px;
+            }
+            .title, .channel {
                 overflow: hidden;
-                height: 13px;
+                white-space: nowrap;
             }
             .description, .created {
                 display: none;
@@ -226,7 +221,7 @@ yt-player {
         
         &.playing, &:hover {
             background-color: bg-playlist-item-playing;
-            transition: background-color 0.5s ease-in-out;
+            transition: background-color 0.25s ease-in-out;
             cursor: pointer;
             
             .index {
